[1seg circle] clean math eq

--- a/1seg_circle/1seg_circle.tex
+++ b/1seg_circle/1seg_circle.tex
@@ -94,7 +94,7 @@ $\vec{F}_W$と$-\vec{F}_S$は
 上肢の長さを$r_{Arm}$、
 手関節から肩関節に向く方向単位ベクトルを$\vec{e}_{Arm}$とすれば
 \begin{align*}
-  0 \cdot \Omega_{S\rightarrow BL}{}_{Arm} &= r_{Arm} \vec{e}_{Arm} \times -\vec{F}_S
+  0 \cdot \dot\theta_{Arm} &= r_{Arm} \vec{e}_{Arm} \times -\vec{F}_S
   \\
   \Leftrightarrow
   0 &= r_{Arm} \vec{e}_{Arm} \times -\vec{F}_S
@@ -151,7 +151,7 @@ $\vec{F}_W$と$-\vec{F}_S$は
   \notag
   \\
   & \qquad - Mr_{Arm}\dot{\theta}_W{}^2\cos\theta_{S\rightarrow BL} 
-  && \qquad -F_S\cos\theta_{S\rightarrow BL}
+  & & \qquad -F_S\cos\theta_{S\rightarrow BL}
   \label{eq:PB:L_start}
   \\
   I_{S\rightarrow BL}\dot\Omega_{S\rightarrow BL}{} 
@@ -165,10 +165,6 @@ $\vec{F}_W$と$-\vec{F}_S$は
   \\
   I_{BL}\dot\Omega_{S\rightarrow BL}{} 
   &= 
-  & &
-  \notag
-  \\
-  & 
   & & \qquad F_S \cdot L_{S\rightarrow BL} \sin\theta_{S\rightarrow BL}
   \label{eq:PB:IG_start}
 \end{align}
